<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context="dev.yash.keymanager.ui.details.SshDetailsFragment">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="40dp"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/key_id"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/heading"
        app:layout_constraintStart_toStartOf="@id/heading"
        app:layout_constraintTop_toBottomOf="@id/heading">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/key_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/ssh_public_key"
        app:endIconDrawable="@drawable/ic_copy"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/id_layout"
        app:layout_constraintStart_toStartOf="@id/id_layout"
        app:layout_constraintTop_toBottomOf="@id/id_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ssh_key"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/created_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/created_on"
        app:endIconCheckable="true"
        app:layout_constraintEnd_toEndOf="@id/key_layout"
        app:layout_constraintStart_toStartOf="@id/key_layout"
        app:layout_constraintTop_toBottomOf="@id/key_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/created_at"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/url_hint"
        app:layout_constraintEnd_toEndOf="@id/created_layout"
        app:layout_constraintStart_toStartOf="@id/created_layout"
        app:layout_constraintTop_toBottomOf="@id/created_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/key_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cursorVisible="false"
            android:textIsSelectable="true" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>